# openclaw-eoffice

./: .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
src/core/: agent_factory.py
workspace/tools/: ocr_tool.py
